test_regress/t/t_flag_wpedantic_bad.out
%Error: t/t_flag_wpedantic_bad.v:7: syntax error, unexpected global, expecting IDENTIFIER or do or final
   reg global;
             ^
%Error: Exiting due to
